# bzip2-MSVC

./: .gitignore  CMakeLists.txt  bzip2.c  bzlib.h  version.bzip2.rc.in  version.dll.rc.in
